# Scout-Navigation

./: CMakeLists.txt  README.md  package.xml
config/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  dwb_local_planner_params.yaml  move_base_common_params.yaml  planner.yaml
config/.ipynb_checkpoints/: planner-checkpoint.yaml
include/: slam_odom.h
launch/: move_base.launch  move_base.xml  move_base_nomap.launch
scripts/: velocity_filter.py
src/: slam_odom.cpp  slam_odom_node.cpp
